Fix context menu z-index

--- a/src/css/videojs-hola-skin.less
+++ b/src/css/videojs-hola-skin.less
@@ -598,6 +598,7 @@
     }
     .vjs-rightclick-popup {
         position: absolute;
+        z-index: 5;
         width: 15em;
         .background-color-with-alpha(@control-bg-color, @control-bg-alpha);
         .box-shadow(-0.2em -0.2em 0.3em rgba(255, 255, 255, 0.2));
